Changelog
=========

4.3.0 (unreleased)
------------------

- Added field "PPN". Refs #15431
  [reinhardt]
- Insert portal title into "downloaded via" note in citation. Refs #15448
  [reinhardt]


4.2.1 (2017-06-12)
------------------

- Removed 'rel' attribute from citation. Fixes PDF generation. Refs #15189
  [reinhardt]


4.2.0 (2017-03-30)
------------------

- Show DOI in citation. Refs #13714
  [reinhardt]


4.1.1 (2017-01-27)
------------------

- Added toggle for using canonical_uri in BVID export, refs #14156
  [reinhardt]


4.1.0 (2017-01-27)
------------------

- Töchter, refs #13569, #13568
  [reinhardt]


4.0.1 (2016-05-23)
------------------

- Run tidy in utf8 mode. Also fixed tmp file suffixes. Refs #13490 [reinhardt]
- Force numeric entities, fixes swallowing of content by abiword, refs #13490
  [reinhardt]
- Don't auto-generate DOI for temporary objects. Refs #13627 [reinhardt]


4.0.0 (2016-04-25)
------------------

* Removed facebook like buttons, refs #13370
* Fixed getSite imports for Plone 4.3, refs #11785
* Tidy html before generating PDFs Refs #13104
* DOI registration support, refs #10976 #12126


3.1.3 (2015-09-01)
------------------

- render the new region_values_bsb in the oaisuggestions, refs #10622
  [reinhardt]


3.1.2 (2015-04-07)
------------------

- escape authors/editors/reviewers in review title, refs #10782 [reinhardt]


3.1.1 (2014-10-07)
------------------

- added field yearOfPublication to Volume type, refs #10554 [reinhardt]


3.1 (2014-08-05)
----------------

- added series and seriesVol to oaisuggestions template, refs #9813 [reinhardt]
- use int values for allowDiscussion, fixes "ValueError: invalid literal for
  int() with base 10: 'False'" [reinhardt]
- added more metadata to SearchableText, refs #9472 [reinhardt]
- added isbn to SearchableText, refs #9472 [reinhardt]
- Fixed SearchableText. PDF text was overwritten by comment text and main text
  was missing. Refs #9472 [reinhardt]
- more initial content [pilz]

