@@ -130,6 +130,21 @@ class View(BrowserView):
 
         return _(fields[field].widget.label)
 
+    def get_doi_url_if_active(self):
+        context = self.context
+        try:
+            doi_active = self.context.isDoiRegistrationActive()
+        except AttributeError:
+            doi_active = False
+        # If DOI registration is not active and the object has only the
+        # auto-generated DOI, i.e. the user has not supplied their own,
+        # then we don't want to show the DOI. See #12126-86
+        if not doi_active and context.getDoi() == context.generateDoi():
+            return False
+        else:
+            return ('http://dx.doi.org/%s' % (context.getDoi(), ))
+        return False
+
     def get_metadata(self):
         context = self.context
         fields = self.context.Schema()._fields
@@ -186,20 +201,13 @@ class View(BrowserView):
                     value = ('<a href="%s">%s</a>'
                              % (url, url))
             elif field == 'doi':
-                try:
-                    doi_active = self.context.isDoiRegistrationActive()
-                except AttributeError:
-                    doi_active = False
-                # If DOI registration is not active and the object has only the
-                # auto-generated DOI, i.e. the user has not supplied their own,
-                # then we don't want to show the DOI. See #12126-86
-                if not doi_active and context.getDoi() == context.generateDoi():
-                    value = False
-                else:
-                    doi = context.getDoi()
+                doi_url = self.get_doi_url_if_active()
+                if doi_url:
+                    value = ('<a rel="doi" href="%s">%s</a>' %
+                            (doi_url, context.getDoi()))
                     label = self.get_label(fields, field, context.meta_type)
-                    value = ('<a rel="doi" href="http://dx.doi.org/%s">%s</a>'
-                            % (doi, doi))
+                else:
+                    label = None
             else:
                 if field == "ddcSubject":
                     label = _("Subject classification")
